--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.mysql-connector-java-8.0.13.jar=D:\\jar\\mysql-connector-java-8.0.13.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -47,7 +48,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${libs.ZK6.0.2CE.classpath}
+    ${libs.ZK6.0.2CE.classpath}:\
+    ${file.reference.mysql-connector-java-8.0.13.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
